--- a/doc/src/installation.page
+++ b/doc/src/installation.page
@@ -4,6 +4,13 @@ inMenu: true
 description: How to install Gecode/R to gain access to constraint programming in Ruby.
 ---
 
+h2. Warning
+
+Gecode/R is still under early development, the syntax is by no means final and
+*backwards compatibility will be broken* time and time again until later in the
+development process. Don't use Gecode/R in production-code yet, it's merely 
+available this early to allow people to play with it and give feedback.
+
 h2. Dependencies
 
 Gecode/R requires Gecode 1.3.1, so you have to install that first.
