--- a/doc/src/documentation/index.page
+++ b/doc/src/documentation/index.page
@@ -1,5 +1,5 @@
 ---
-title: Documentation
+title: Introduction
 inMenu: true
 description: How to use Gecode/R to model problems and solve them using constraint programming.
 ---
