--- a/doc/src/documentation/constraints.page
+++ b/doc/src/documentation/constraints.page
@@ -113,7 +113,7 @@ The different strengths are:
 They are specified with the key @:strength@. The following places a domain 
 consistent distinct constraint on @numbers@.
 
- numbers.must_be.distinct(:strength => :distinct)
+ numbers.must_be.distinct(:strength => :domain)
 
 h3. Reification
  
