--- a/doc/src/documentation/constraints.page
+++ b/doc/src/documentation/constraints.page
@@ -138,6 +138,6 @@ be used with all reifiable constraints. To express a conjunction of two
 constraints one simply places @|@ between them, analogically for conjunctions 
 and @&@. The new expression is also a reifiable constraint, so one can nest the
 expressions if wanted. The following constrains that either x must be less than 
-0 or y must be greater than 5 and x must be 0).
+0 or y must be greater than 5 and x must be 0.
 
  x.must < 0 | (y.must > 5 & x.must <no_textile>==</no_textile> 0)
