Updated the current development status.

--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -28,8 +28,8 @@ h2. Development status
 
 The project is currently in an early development stage. The interface is working
 but has a very limited set of functionality. It currently supports finite domain
-integers along basic relation, linear and distinct constraints. The next step
-is to add access to more constraints for integer variables.
+integers and boolean along with linear, distinct and boolean constraints. The 
+next step is to add access to more constraints for integer variables.
 
 h2. Communication
 
