--- a/doc/src/documentation/index.page
+++ b/doc/src/documentation/index.page
@@ -30,22 +30,31 @@ There are three main parts of a model:
 
 h3. Variables
 
-Gecode/R currently only support the use of integer variables. A variable has a
-domain which must be specified upon construction. The domain of the variable
-represents the values that the variable can take, for instance a variable might
-have domain 0..9 which means that it can take any value in the range 0 to 9. To
-create an integer variable we use @Model#int_var@.
+h4. Integer variables
+
+Integer variables have domains which must be specified upon construction. The 
+domain of a variable represents the values that the variable can take, for 
+instance a variable might have domain 0..9 which means that it can take any 
+value in the range 0 to 9. To create an integer variable we use @Model#int_var@.
 
  number = int_var(0..9) # Creates an integer variable with domain 0..9.
 
-Alternatively one can also create multiple integer variables with the same domain
-at once using @Model#int_var_array@ which returns an array of variables.
+Alternatively one can also create multiple integer variables with the same 
+domain at once using @Model#int_var_array@ which returns an array of variables.
 
  numbers = int_var_array(8, 0..9) # Creates 8 variables with domains 0..9.
 
-Boolean variables also exist, they are created using @Model#bool_var@ and 
-@Model#bool_var_array@, just like integer variables but without the need for
-domains.
+The domain specified does not have to be a range, it can also be a series of
+elements. The following creates an integer variable with the odd numbers in 
+0..9 as domain.
+
+ odd_number = int_var(1,3,5,7,9)
+
+h4. Boolean variables
+
+Boolean variables (which can either be true or false) are created using 
+@Model#bool_var@ and @Model#bool_var_array@, just like integer variables but 
+without the need for domains.
 
  bool = bool_var # Creates a boolean variable
  bools = bool_var_array(3) # Creates 3 boolean variables.
