--- a/doc/src/default.css
+++ b/doc/src/default.css
@@ -21,6 +21,11 @@ h3 {
   font-size: 1em;
   margin-top: 1.5em;
 }
+h4 {
+  font-size: 0.9em;
+  margin-top: 1em;
+  margin-bottom: 0;
+}
 p {
   margin: 0.75em 0;
 }
