--- a/doc/src/documentation/index.page
+++ b/doc/src/documentation/index.page
@@ -12,7 +12,7 @@ underlying engine will search for a solution.
 A model is typically constructed by creating a class that inherits from 
 @Gecode::Model@.
 
-<pre>
+<ruby>
 class MyModel < Gecode::Model
   def initialize
     # Place variables, constraints and branching selection here.
@@ -21,7 +21,7 @@ end
 
 # Print the solution.
 puts MyModel.new.solve!.to_s
-</pre>
+</ruby>
 
 There are three main parts of a model:
 * Variables
@@ -37,29 +37,39 @@ domain of a variable represents the values that the variable can take, for
 instance a variable might have domain 0..9 which means that it can take any 
 value in the range 0 to 9. To create an integer variable we use @Model#int_var@.
 
- number = int_var(0..9) # Creates an integer variable with domain 0..9.
+<ruby>
+number = int_var(0..9) # Creates an integer variable with domain 0..9.
+</ruby>
 
 Alternatively one can also create multiple integer variables with the same 
 domain at once using @Model#int_var_array@ which returns an array of variables.
 
- numbers = int_var_array(8, 0..9) # Creates 8 variables with domains 0..9.
+<ruby>
+numbers = int_var_array(8, 0..9) # Creates 8 variables with domains 0..9.
+</ruby>
 
 The domain specified does not have to be a range, it can also be a series of
 elements. The following creates an integer variable with the odd numbers in 
 0..9 as domain.
 
- odd_number = int_var(1,3,5,7,9)
+<ruby>
+odd_number = int_var(1,3,5,7,9)
+</ruby>
 
 Matrices can be created using @Model#int_var_matrix@ (returns an instance of
 Matrix). 
 
- number_matrix = int_var_matrix(5, 4, 0..9) # 5 rows and 4 columns.
+<ruby>
+number_matrix = int_var_matrix(5, 4, 0..9) # 5 rows and 4 columns.
+</ruby>
 
 Additional custom enumerations containing variables can be used, but they have
 to be wrapped using @Model#wrap_enum@ first.
 
- my_enum = wrap_enum(my_enum)
- my_enum.must_be.distinct
+<ruby>
+my_enum = wrap_enum(my_enum)
+my_enum.must_be.distinct
+</ruby>
 
 h4. Boolean variables
 
@@ -67,9 +77,11 @@ Boolean variables (which can either be true or false) are created using
 @Model#bool_var@, @Model#bool_var_array@ and @Model#bool_var_matrix@, just like 
 integer variables but without the need for domains.
 
- bool = bool_var # Creates a boolean variable
- bools = bool_var_array(3) # Creates 3 boolean variables.
- bool_matrix = bool_var_matrix(3, 4) # Creates a 3x4 matrix of boolean variables.
+<ruby>
+bool = bool_var # Creates a boolean variable
+bools = bool_var_array(3) # Creates 3 boolean variables.
+bool_matrix = bool_var_matrix(3, 4) # Creates a 3x4 matrix of boolean variables.
+</ruby>
 
 h3. Constraints
 
@@ -78,7 +90,9 @@ created using variables in combination with @must@ and @must_not@. The
 constraint that one variable x must be larger than another variable y is for 
 instance expressed as
 
- x.must > y
+<ruby>
+x.must > y
+</ruby>
 
 h3. Branching
 
@@ -88,7 +102,9 @@ in order to get any further (i.e. it will have to explore the search space).
 This is called branching. Which variable and selection strategies to use is 
 specified with @Model#branch_on@
 
- branch_on numbers, :variable => :smallest_size, :value => :min
+<ruby>
+branch_on numbers, :variable => :smallest_size, :value => :min
+</ruby>
 
 One can specify how these guesses should be made, possibly cutting down the
 search space by picking a good heuristic. An example of a common heuristic
