--- a/doc/src/default.css
+++ b/doc/src/default.css
@@ -45,6 +45,10 @@ pre {
   padding: 0.5em;
   font-size: 1.1em;
 }
+blockquote {
+  margin: 15px 30px 0 45px;
+  font-style:italic;
+}
 ul, ol { 
   margin: 1em 1em 1em 2em;
 }
