--- a/doc/src/default.css
+++ b/doc/src/default.css
@@ -31,11 +31,19 @@ p {
 }
 div#contents {
   position: relative;
+  border: 1px solid #666;
+  background: #FFF;
 }
 div#body {
   padding: 4em 1em 1px 1em;
-  border: 1px solid #666;
+}
+div#footer {
+  margin: 0.5em;
+  margin-bottom: 0;
+  padding: 0 0.5em;
+  border-top: 1px solid #CCC;
   background: #FFF;
+  font-size: 80%;
 }
 pre {
   background-color: #F8F8F8;
@@ -55,9 +63,8 @@ ul, ol {
 code {
   font-size: 120%;
 }
-
 div.header {
-	width: 100%;
+  width: 100%;
   position: absolute;
   top: 0;
 }
@@ -96,6 +103,7 @@ div.submenu ul {
   display: block;
   background: #BDCD9D;
   border: 1px solid #333;
+  border-width: 1px 0;
 }
 div.submenu ul li {
   padding: 0.2em 1em;
@@ -115,30 +123,33 @@ div.submenu ul li {
 }
 
 /*Utils*/
-.horizontal ul {
+.horizontal ul, .horizontal2 {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.horizontal li {
+.horizontal li, .horizontal2 li {
   float: left;
   padding: 0 0.5em;
   border-right: 1px solid #666;
 }
-.horizontal .last, .horizontal .right {
+.horizontal2 li {
+  border-width: 0;
+}
+.horizontal .last, .horizontal .right, .horizontal2 .last, .horizontal2 .right {
   padding-right: 0;
   border-right: 0;
 }
-.horizontal .right { 
+.horizontal .right, .horizontal2 .right { 
   float: right;
 }
-.horizontal ul:after {
+.horizontal ul:after, .horizontal2:after {
   content: "."; 
   display: block; 
   height: 0; 
   clear: both; 
   visibility: hidden;
 }
-.horizontal ul { display: inline; }
-* html .horizontal ul { height: 1%; }
-.horizontal ul { display: block; }
+.horizontal ul, .horizontal2 { display: inline; }
+* html .horizontal ul, .horizontal2 { height: 1%; }
+.horizontal ul, .horizontal2 { display: block; }
