--- a/doc/src/installation.page
+++ b/doc/src/installation.page
@@ -18,7 +18,7 @@ Gecode/R requires Gecode 1.3.1, so you have to install that first.
 * "Download link":http://www.gecode.org/download.html
 * "Installation instructions":http://www.gecode.org/gecode-doc-latest/PageComp.html
 
-h2. Install
+h2. Installation
 
 There are several different ways to install Gecode/R.
 
@@ -42,4 +42,12 @@ then build and install the gem with
 
   rake gem
   gem install pkg/gecoder-0.x.x.gem
-  
+
+h2. Running the tests
+
+To make sure that the installation was successful you can run the included 
+specs. They require "RSpec":http://rspec.rubyforge.org/download.html 1.0.5 or
+something similar. Run the specs by issuing the following command from the 
+directory where Gecode/R was installed.
+
+  rake specs
